@@ -141,7 +141,7 @@ public class NewGrailsProjectWizardIterator implements WizardDescriptor.Progress
                     GrailsProjectSettings.getDefault().setLastUsedArtifactFolder(dirF.getParentFile());
                 }
             }
-            dirF = (dirF != null) ? dirF.getParentFile() : null;
+            dirF = dirF.getParentFile();
             if (dirF != null && dirF.exists()) {
                 ProjectChooser.setProjectsFolder(dirF);
             }
@@ -184,7 +184,7 @@ public class NewGrailsProjectWizardIterator implements WizardDescriptor.Progress
             if (c instanceof JComponent) { // assume Swing components
                 JComponent jc = (JComponent) c;
                 // Step #.
-                jc.putClientProperty(WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, new Integer(i)); // NOI18N
+                jc.putClientProperty(WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, Integer.valueOf(i)); // NOI18N
                 // Step name (actually the whole list for reference).
                 jc.putClientProperty(WizardDescriptor.PROP_CONTENT_DATA, steps); // NOI18N
             }
